<resources>
    <!-- General -->
    <string name="app_name">To do app</string>
    <string name="welcome_message">Welcome to MAD S23</string>
    <string name="welcome_message_alternative">Welcome once again.</string>

    <!-- Overview-->
    <string name="overviewTitle">ToDos</string>

    <!-- Detail View-->
    <string name="detail_hint_name">Name</string>
    <string name="detail_hint_description">Description</string>
    <string name="detail_hint_date">Date</string>
    <string name="detail_hint_time">Time</string>

    <!-- Sort Menu -->
    <string name="sort_by_date">Date</string>
    <string name="sort_by_favourite">Favourite</string>
    <string name="REMOVE_ALL">REMOVE_ALL</string>

    <!-- Login Screen -->
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_button">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
