<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDark"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10sp"
        android:text="@string/app_name"
        android:textColor="@color/grey"
        android:textSize="40sp"
        android:textStyle="bold"

        app:drawableRightCompat="@drawable/baseline_done_all_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/login_email_layout"
            android:layout_width="300sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_email"
            android:textColorHint="@color/grey"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/login_password_layout"
            android:layout_width="300sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_password"
            android:textColorHint="@color/grey"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:inputType="numberPassword"
                android:maxLength="6"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/loginErrorMessage"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_marginTop="20sp"
            android:text="Email or password wrong!"/>

        <Button
            android:visibility="gone"
            android:id="@+id/loginButton"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:layout_marginTop="20sp"
            />

        <ProgressBar
            android:id="@+id/login_progressBar"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_centerInParent="true"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>