<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="org.dieschnittstelle.mobile.android.skeleton.viewmodel.IDetailViewModel" />
    </data>
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dip">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/detailNameLayout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/detail_hint_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/detailName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewmodel.todo.name}"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="@={viewmodel.todo.favourite}"
                    android:button="@drawable/baseline_not_favourite_24"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/detailDateLayout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/detail_hint_date"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/detailDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{viewmodel.todo.date}"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/detailTimeLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/detail_hint_time"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/detailTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{viewmodel.todo.time}"
                        />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/detailDescriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/detail_hint_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/detailDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:gravity="top"
                    android:text="@={viewmodel.todo.description}"

                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveButton"
            android:onClick="@{() -> viewmodel.onSaveTodo()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="30dp"
            android:src="@drawable/baseline_save_24"
            />

    </RelativeLayout>
</layout>
